--- a/index-aqueduct.html
+++ b/index-aqueduct.html
@@ -130,23 +130,13 @@
 
 <h2 id="how-to-generate-your-private-token">How to generate your private token</h2>
 
-<p>To generate your own token, perform the following steps:</p>
-
 <ol>
-<li>Navigate to <a href="http://ui.resourcewatch.org/">here</a>. If you are not logged in yet, the application will redirect you to the login page. You will see the login page:</li>
+<li>On the browser, visit the API&rsquo;s login page at <a href="https://api.resourcewatch.org/auth/login">https://api.resourcewatch.org/auth/login</a>.</li>
+<li>Login using your account.</li>
+<li>Once you are at <code class="prettyprint">auth/success</code>, go to <a href="https://api.resourcewatch.org/auth/generate-token">https://api.resourcewatch.org/auth/generate-token</a> to generate a new token.</li>
 </ol>
 
-<p><img src="images/authentication/login.png" alt="Control Tower login page" /></p>
-
-<p>You can login with your WRI credentials (email and password) or with other auth providers (a Google, Facebook, or Twitter account). If you can&rsquo;t remember your password (don&rsquo;t worry! it happens to everyone!) you can reset your password clicking on &lsquo;Recover password&rsquo;.</p>
-
-<ol>
-<li><p>After logging in you will be redirected to the Control Tower application and you will see its front page:
-<img src="images/authentication/control-tower.png" alt="Control Tower Dashboard" /></p></li>
-<li><p>To obtain your token, click in the Profile menu item and you will see the token:
-<img src="images/authentication/profile.png" alt="Control Tower Profile" /></p></li>
-<li><p>Copy your token clicking the Copy button. Remember to add the header <code class="prettyprint">Authorization: Bearer: &lt;yourToken&gt;</code> to any API call to authenticate yourself.</p></li>
-</ol>
+<p><img src="images/authentication/auth-success.png" alt="Auth success" /></p>
 
 <h2 id="how-to-create-a-new-user">How to create a new user</h2>
 
@@ -164,7 +154,7 @@
     }
 }'</span>
 </code></pre>
-<p>There are three allowed roles: <code class="prettyprint">USER</code>, <code class="prettyprint">MANAGER</code> and <code class="prettyprint">ADMIN</code>. The &#39;apps&rsquo; field only permits applications that are powered by the API: <code class="prettyprint">rw</code>, <code class="prettyprint">gfw</code>, <code class="prettyprint">prep</code>, etc.</p>
+<p>There are three allowed roles: <code class="prettyprint">USER</code>, <code class="prettyprint">MANAGER</code> and <code class="prettyprint">ADMIN</code>. The &lsquo;apps&rsquo; field only permits applications that are powered by the API: <code class="prettyprint">rw</code>, <code class="prettyprint">gfw</code>, <code class="prettyprint">prep</code>, etc.</p>
 
           <h1 id="contact">Contact</h1>
 
